--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cgmath = "0.18.0"
 image = "0.24.6"
 rand = "0.8.5"
 vulkano = "0.33.0"
+vulkano-shaders = "0.33.0"
 
 [profile.dev]
 opt-level = 1
